--- a/index.html
+++ b/index.html
@@ -50,12 +50,44 @@
 
         function Botao({ children }) {
             return (
-                <button 
-                    type='submit' 
-                    className='form__botao'
-                >
+                <button type='submit' className='form__botao'>
                     { children }
                 </button>
+            )
+        }
+
+        function Checkbox() {
+            return (
+                <>
+                <div className='form__campo-checkbox'>
+                    <input type='checkbox' id='lembrar'/>
+                    <label for='lembrar'/>
+                </div>
+                <p className='form__opcoes-texto'>Lembrar-me</p>
+                </>
+            )
+        }
+
+        function Texto({ classe, children }) {
+            return (
+                <p className={ classe }>{ children }</p>
+            )
+        }
+
+        function ItemRedesSociais({ link, nome }) {
+            return (
+                <li>
+                    <a href={link}>
+                        <img src= {`./img/${nome}.svg`} alt={`ícone do ${nome}`} />
+                        { nome }
+                    </a>    
+                </li>
+            )
+        }
+
+        function Link({ children }) {
+            return (
+                <a href='#' className='container-links__link'>{children}</a>
             )
         }
 
@@ -90,10 +122,25 @@
                                 value={ senha }
                                 setValor={ setSenha }
                             />
+                            <fieldset className='form__opcoes'>
+                                <Checkbox/>
+                                <p>
+                                    <a href='#' aria-label='recuperar senha esquecida'>Esquecia a senha</a>
+                                </p>
+                            </fieldset>
                             <Botao>
                                 Login
                             </Botao>
                         </form>
+                        <div className='container-links'>
+                            <Texto classe='container-links__titulo'>ou entre com outras contas </Texto>
+                            <ul>
+                                <ItemRedesSociais link='https://www.github.com' nome='Github'/>
+                                <ItemRedesSociais link='https://www.google.com' nome='Google'/>
+                            </ul>
+                            <Texto classe='container-links__texto'>Ainda não tem conta?</Texto>
+                            <Link>Crie o seu cadastro</Link>
+                        </div>
                     </section>
                 </div>
             )
